crates/uitest/fixtures/ty_check/must_use_custom_enum.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/must_use_custom_enum.fe
---
error[8-0082]: unused value of type `Token`
   ┌─ must_use_custom_enum.fe:11:5
   │
11 │     make_token()
   │     ^^^^^^^^^^^^ use this value or explicitly discard it with `let _ = ...`
   │
   = this type is marked `#[must_use]`
